src/test/deca/context/valid/created/testOpArith/moduloMultiple.deca
// Description :
//    Test de plusieurs operations modulo
//
// Résultats :
//    ok

{
    int x = 25 % 5 % 2; 
}
